K3S/monitoring/Blackbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      hostNetwork: true
      containers:
        - name: blackbox-exporter
          image: prom/blackbox-exporter:v0.24.0
          args:
            - --config.file=/config/blackbox.yml
          ports:
            - containerPort: 9115
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: blackbox-config
